--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,43 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Webpack-5</title>
+    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="../node_modules/basiclightbox/dist/basicLightbox.min.css"> -->
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+    <!-- <link rel="stylesheet" href="../src/css/styles.scss" /> -->
   </head>
   <body>
-    <h1>the World is Wide!</h1>
-    <input type="text" id="input" />
-    <ul id="list"></ul>
+
+    <form class="search-form" id="search-form">
+      <input
+        class="input"
+        type="text"
+        name="query"
+        autocomplete="off"
+        placeholder="Search images..."
+      />
+    
+      <!-- <button class="search-btn btn" type="submit"><span class="load">Load</span>
+        <span class="spinner visually-hidden">
+          <span class="spinner-border spinner-border-sm " role="status" aria-hidden="true"></span>Loading...</span>
+    </button> -->
+    <button class="search-btn btn" type="submit"><span class="load">Load</span>
+        <span class="spinner-border spinner-border-sm spinner visually-hidden" role="status" aria-hidden="true"></span>
+    </button>
+    </form>
+
+    <ul class="gallery container">
+      <!-- Список <li> с карточками изображений -->
+    </ul>
+  
+    <button class="load-more-btn btn" type="button">Load more</button>
+
+    <script src="index.js"></script>
+    
   </body>
 </html>
